# HathiValidate

./: .buildinfo  .pylintrc  Jenkinsfile  MANIFEST.in  about.html  dependencies.html  genindex.html  hathi_validate.html  index.html  installSourceCLI.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sonar-project.properties  tox.ini  usage.html  usageCLI.html
.doctrees/: about.doctree  dependencies.doctree  environment.pickle  hathi_validate.doctree  index.doctree  installSourceCLI.doctree  installation.doctree  modules.doctree  requirements.doctree  usage.doctree  usageCLI.doctree
.github/workflows/: tox_matrix.yml
ci/docker/build_windows/: Dockerfile
ci/docker/python/linux/jenkins/: Dockerfile
ci/docker/python/linux/tox/: Dockerfile  apt-packages.txt
ci/docker/python/shared/: requirements-ci.txt
ci/docker/python/windows/: Dockerfile
ci/docker/python/windows/tox/: Dockerfile
ci/jenkins/scripts/: devpi.groovy  sonarqube.groovy  tox.groovy  utils.groovy
docs/source/: conf.py
hathi_validate/: __init__.py  __main__.py  cli.py  configure_logging.py  manifest.py  package.py  process.py  report.py  result.py  validator.py  xml_schemes.py
hathi_validate/ignore/: gui.py
requirements/: requirements-ci-freeze.txt  requirements-dev-freeze.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
src/hathi_validate/: __main__.py  catalog.xml  cli.py  configure_logging.py  process.py  report.py  result.py  validator.py
src/hathi_validate/xsd/: __init__.py
tests/: test_cli.py  test_process.py  test_report.py  test_result.py
vars/: runJenkinsPipeline.groovy
