[build-system]
requires = ["setuptools>=50.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HathiValidate"
version = "0.3.9.dev0"
dependencies = [
    "lxml<5.1.0; sys_platform == 'darwin' and python_version == '3.8' and platform_machine == 'arm64'",
    "lxml; sys_platform != 'darwin' or python_version != '3.8' or platform_machine != 'arm64'",
    "PyYAML",
    'importlib_resources;python_version<"3.9"',
    ]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "University of Illinois/NCSA Open Source License"}
authors = [
    {name = "University Library at The University of Illinois at Urbana Champaign: Preservation Services", email = "prescons@library.illinois.edu"},
]
maintainers = [
    {name = "Henry Borchers", email = "hborcher@illinois.edu"}
]
description = "Replacement for older scripts for validating Hathi Trust Packages"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: University of Illinois/NCSA Open Source License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
Documentation = "https://www.library.illinois.edu/dccdocs/hathi_validate"
Download = "https://github.com/UIUCLibrary/HathiValidate"

[tool.setuptools]
packages = [
    "hathi_validate",
    "hathi_validate.xsd",
]
zip-safe = false

[tool.setuptools.package-data]
hathi_validate = ["xsd/*.xsd", "py.typed"]

[project.scripts]
hathivalidate = "hathi_validate.cli:main"

[tool.coverage.run]
branch = true
source = ["hathi_validate"]
relative_files = true

[tool.coverage.paths]
source = ["hathi_validate"]

[tool.coverage.report]
exclude_lines =[
    "if TYPE_CHECKING:",
    "except ImportError"
]

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = [
    "tests"
]



[tool.mypy]
ignore_missing_imports = true
